# ai-programming

./: .gitignore
hw1/: README.md  cat_dog_experiment_adaptive.py  main.py  requirements.txt
hw1/src/: __init__.py  analysis.py  config.py  data.py  model.py  train.py  utils.py
hw2/: Makefile  activation.h  main.cpp  report.md  tensor.cpp  tensor.h
hw3/: .clang-format  Makefile  layers.cu  layers.h  main.cpp
hw4/: CMakeLists.txt  activation.cu  bindings.cpp  gemm.cu  gemm.h  layers.cpp  setup.py  tensor.cu  tensor.h  test_modules.py  train.py
